--- a/moneyball.ipynb
+++ b/moneyball.ipynb
@@ -120,7 +120,7 @@
    "source": [
     "### Salary\n",
     "\n",
-    "However, Oakland A's were extreamly limited with budget for payroll. With approximately $40 million in salary, they were suppose to compete with larger market teams, such as the Yankees with $125 million in payroll during the 2002 baseball season."
+    "However, Oakland A's were extreamly limited with budget for payroll. With approximately 40 million dollar in salary, they were suppose to compete with larger market teams, such as the Yankees with 125 million dollar in payroll during the 2002 baseball season."
    ]
   },
   {
